# financial-sa-fde-skill-system

./: .gitignore  README.md  index.html  publish.sh
data/: bank_skill_matrix_ledger.json  (+3 more)
presales-skill-matrix/wealth-product-net-value-analysis/: .dodo_managed.json  SKILL.md  _meta.json  mcp_server.py  pyproject.toml  requirements.txt  wealth-product-net-value-analysis-demo.html
presales-skill-matrix/wealth-product-net-value-analysis/data/: external_data.json  fund_companies_distilled.json  fund_managers_distilled.json  holdings_database.json  manager_views.json  style_profiles.json
presales-skill-matrix/wealth-product-net-value-analysis/references/: amac_api.md  database_schema.md  eastmoney_api.md  style_classification.md
presales-skill-matrix/wealth-product-net-value-analysis/scripts/: web_server.py
presales-skill-matrix/wealth-product-net-value-analysis/scripts/analysis/: batch_company_report.py  batch_speech_generator.py  batch_speech_generator_v2.py  company_distiller.py  comparison_engine.py  comprehensive_analyzer.py  config.py  distiller.py  enhanced_company_report.py  fund_advisor_speech.py  fund_quant_analyzer.py  humanized_speech_generator.py  macro_analyzer.py  manager_portfolio_builder.py  news_advisor.py  performance_tracker.py  portfolio_analyzer.py  portfolio_recommender_v1_DEPRECATED.py  portfolio_recommender_v2.py  portfolio_scheduler.py  realtime_manager_talk.py  speech_generator.py  speech_humanizer_v3.py  stock_quant_analyzer.py  style_analyzer.py
presales-skill-matrix/wealth-product-net-value-analysis/templates/: index.html
(+187 files in other folders)
